# capstone_ws

./: .gitignore  README.md  result.bag  result2.bag
devel/: .catkin  local_setup.sh
devel/include/manipulator_pose_following/: DeltaPoseRPY.h  InitPoint.h  InitPointRequest.h  InitPointResponse.h  MoveHome.h  MoveHomeRequest.h  MoveHomeResponse.h  MoveToQuat.h  MoveToQuatRequest.h  MoveToQuatResponse.h  MoveToRPY.h  MoveToRPYRequest.h  MoveToRPYResponse.h  PlannedPath.h  ReplyInt.h  ReplyIntRequest.h  ReplyIntResponse.h  SetVelocity.h  SetVelocityRequest.h  SetVelocityResponse.h
devel/include/motoman_msgs/: CmdJointTrajectoryExRequest.h  CmdJointTrajectoryExResponse.h  DynamicJointPoint.h  DynamicJointState.h  DynamicJointTrajectory.h  DynamicJointTrajectoryFeedback.h  DynamicJointsGroup.h
devel/include/path_control/: ControllMsg.h  EndEffectorState.h  MoveToFirstPosition.h  MoveToFirstPositionRequest.h  MoveToFirstPositionResponse.h  MoveToPosition.h  MoveToPositionRequest.h  MoveToPositionResponse.h
devel/lib/manipulator_pose_following/: check_kinematic_node  control_with_leap_node  kb_jogging  moveit_interface  point_traj_following  pose_following  read_planned_file  send_trajectory_2actionlib  smooth_jogging  test_keyboard_node  test_service  test_traject  user_pose_testing_node
devel/lib/motoman_driver/: motion_streaming_interface  motion_streaming_interface_bswap  motoman_driver_joint_trajectory_action  robot_state  robot_state_bswap
devel/lib/path_control/: controller  controller-v1  error_calculator  feedback_constrain  forward_calculator  full_ref_path  move_to_home_server  pos_ref_path  read_from_bag  ref_path  robot_model_and_robot_state  sensor_constrain  test_node  test_robot_model_and_robot_state  traj_following  trajectory_publisher  update_robot_node  update_robot_node-v1
devel/lib/pkgconfig/: manipulator_pose_following.pc  motoman_driver.pc  motoman_gp12_support.pc  motoman_gp7_support.pc  motoman_gp8_support.pc  motoman_mh12_support.pc  motoman_mh50_support.pc  motoman_mh5_support.pc  motoman_motomini_support.pc  motoman_msgs.pc  motoman_sda10f_moveit_config.pc  motoman_sda10f_support.pc  motoman_sia10d_support.pc  motoman_sia10f_support.pc  motoman_sia20d_moveit_config.pc  motoman_sia20d_support.pc  motoman_sia5d_support.pc  motomini.pc  path_control.pc  sensor_driver.pc
devel/lib/sensor_driver/: handle_leap_motion  only_leap  only_leap_measure_FFT  receiver_leap_motion
devel/share/manipulator_pose_following/cmake/: manipulator_pose_following-msg-paths.cmake  manipulator_pose_followingConfig.cmake
devel/share/motoman_driver/cmake/: motoman_driverConfig.cmake
devel/share/motoman_gp12_support/cmake/: motoman_gp12_supportConfig.cmake
devel/share/motoman_gp7_support/cmake/: motoman_gp7_supportConfig.cmake
devel/share/motoman_gp8_support/cmake/: motoman_gp8_supportConfig.cmake
devel/share/motoman_mh12_support/cmake/: motoman_mh12_supportConfig.cmake
devel/share/motoman_mh50_support/cmake/: motoman_mh50_supportConfig.cmake
src/: test-pitch-1.bag
src/motomini/: .setup_assistant  CMakeLists.txt
src/motomini/config/: fake_controllers.yaml  motoman_motomini.srdf  ompl_planning.yaml  ros_controllers.yaml
src/motomini/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  gazebo.launch  motoman_motomini_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/path_control/: CMakeLists.txt
src/path_control/bag/: my-path-record.bag  my-robot-record.bag  my_bag_record_1.bag  ref_path.bag  setpoint_ref.bag  test-pitch.bag
src/path_control/bag/Kd_test/: Kd_0.001_50mm.bag  Kd_0.005_50mm.bag  Kd_0.01_50mm.bag  Kd_0.01_Kp_1.2_50mm.bag  Kd_0.02_Kp_1.2_50mm.bag  Kd_0.03_Kp_1.2_50mm.bag  Kd_0.04_Kp_1.2_50mm.bag  Kd_0.05_50mm.bag  Kd_0.05_Kp_1.2_50mm.bag
src/path_control/bag/Kp_test/: Kp_0.5_100mm.bag  Kp_0.5_50mm.bag  Kp_1.25_50mm.bag  Kp_1.5_100mm.bag  Kp_1_100mm.bag  Kp_1_50mm.bag  Kp_2_100mm.bag  Kp_2_50mm.bag
src/path_control/bag/ramp_test/: ramp_Kp_1.25_50mm.bag  ramp_Kp_1.5_50mm.bag  ramp_damp_0.01_100mm.bag  ramp_damp_0.01_10mm.bag  ramp_damp_0.01_25mm.bag  ramp_damp_0.01_50mm.bag  ramp_damp_0.01_5mm.bag  ramp_damp_0.01_75mm.bag  ramp_damp_0.05_10mm.bag  ramp_damp_0.05_50mm.bag  ramp_damp_0.05_5mm.bag  ramp_damp_0.25_50mm.bag
src/path_control/bag/sine_test/: sine_roll_0.5hz.bag  sine_roll_1hz.bag  sine_roll_2hz.bag  sine_roll_3hz.bag  sine_roll_4hz.bag  sine_x_0.5hz.bag  sine_x_10hz.bag  sine_x_1hz.bag  sine_x_2hz.bag  sine_x_3hz.bag  sine_x_4hz.bag
src/path_control/msg/: ControllMsg.msg  EndEffectorState.msg
src/path_control/scripts/: launch_gui.py
src/path_control/src/: 1-sensor_constrain.cpp  2-feedback_constrain.cpp  3-0-controller.cpp  3-1-controller-v1.cpp  4-0-update_robot_node.cpp  4-1-update_robot_node-v1.cpp  4-update_robot_node.cpp  5-0-pos_ref_path.cpp  5-1-full_ref_path.cpp  5-2-sine_ref_path.cpp  5-3-ramp_ref_path.cpp  6-error_calculator.cpp  7-bridge_delay_test.cpp  forward_calculator.cpp  move_to_home_server.cpp  read_from_bag.cpp  robot_model_and_robot_state.cpp  test_node.cpp  test_robot_model_and_robot_state.cpp  traj_following.cpp  trajectory_publisher.cpp
src/path_control/srv/: MoveToFirstPosition.srv  MoveToPosition.srv
src/plot_bag_data/: CMakeLists.txt  package.xml
src/plot_bag_data/bag/: ref-path-1-4.bag  ref_path_11_3.bag  test.bag
src/plot_bag_data/bag/Kp/0.5/: ramp_Kp_0.5_50mm.bag
src/plot_bag_data/bag/Kp/1/: ramp_Kp_1_50mm.bag
src/plot_bag_data/bag/singularities/: test_singularity.bag  test_singularity_pos_ref_path.bag  test_singularity_pos_ref_path_1.bag
src/plot_bag_data/scripts/: plot_pos_x.py  plot_ramp.py  plot_ramp_Kp.py  plot_ramp_Td.py  plot_ramp_damping_constant.py  plot_rosbag.py  plot_rotaion_angle.py  plot_sine.py  plot_sine_test.py  sine_wave_pub.py  singularity_plot.py
(+100 files in other folders)
